# dev-cli

./: .gitignore  Cargo.toml  README.md  README_EN.md  SPEC.md  install.sh
.github/workflows/: ci.yml  release.yml
.trae/documents/: ai_agents_plan.md  ai_infra_tools_plan.md  dev-cli-plan.md  windows_env_analysis_plan.md
docs/: CONTRIBUTING_NEW_TOOLS.md  PRD.md  TECHNICAL_DESIGN.md
docs/superpowers/plans/: 2026-04-08-ux-improvements.md
scripts/: windows_setup.ps1
src/: cli.rs  lib.rs  main.rs  summary.rs  systemd.rs  tui.rs  uninstaller.rs
src/core/: cmd.rs  mod.rs  models.rs  sudo.rs  version.rs
src/installers/: ai_agents.rs  ai_env.rs  apt.rs  base.rs  cli_tools.rs  docker.rs  lang.rs  mod.rs
tests/: installers_test.rs
